builds/tests/383/data/attachments/6167bc67bdc2113.txt
INFO     yoyo.migrations:base.py:527 Applying 0001_initial_schema
INFO     yoyo.migrations:migrations.py:402  - applying step 0
INFO     yoyo.migrations:migrations.py:402  - applying step 1
INFO     yoyo.migrations:migrations.py:402  - applying step 2
INFO     yoyo.migrations:migrations.py:402  - applying step 3
INFO     yoyo.migrations:migrations.py:402  - applying step 4
INFO     yoyo.migrations:migrations.py:402  - applying step 5
INFO     yoyo.migrations:migrations.py:402  - applying step 6
INFO     yoyo.migrations:migrations.py:402  - applying step 7
INFO     yoyo.migrations:migrations.py:402  - applying step 8
INFO     yoyo.migrations:migrations.py:402  - applying step 9
INFO     yoyo.migrations:migrations.py:402  - applying step 10
INFO     yoyo.migrations:migrations.py:402  - applying step 11
INFO     yoyo.migrations:migrations.py:402  - applying step 12
INFO     yoyo.migrations:migrations.py:402  - applying step 13
INFO     yoyo.migrations:migrations.py:402  - applying step 14
INFO     yoyo.migrations:migrations.py:402  - applying step 15
INFO     yoyo.migrations:migrations.py:402  - applying step 16
INFO     yoyo.migrations:migrations.py:402  - applying step 17
INFO     yoyo.migrations:migrations.py:402  - applying step 18
INFO     yoyo.migrations:migrations.py:402  - applying step 19
INFO     yoyo.migrations:migrations.py:402  - applying step 20
INFO     yoyo.migrations:migrations.py:402  - applying step 21
INFO     yoyo.migrations:migrations.py:402  - applying step 22
INFO     yoyo.migrations:migrations.py:402  - applying step 23
INFO     yoyo.migrations:migrations.py:402  - applying step 24
INFO     yoyo.migrations:migrations.py:402  - applying step 25
INFO     yoyo.migrations:migrations.py:402  - applying step 26
INFO     yoyo.migrations:migrations.py:402  - applying step 27
INFO     yoyo.migrations:migrations.py:402  - applying step 28
INFO     yoyo.migrations:migrations.py:402  - applying step 29
INFO     yoyo.migrations:migrations.py:402  - applying step 30
INFO     yoyo.migrations:migrations.py:402  - applying step 31
INFO     yoyo.migrations:migrations.py:402  - applying step 32
INFO     yoyo.migrations:migrations.py:402  - applying step 33
INFO     yoyo.migrations:migrations.py:402  - applying step 34
INFO     yoyo.migrations:migrations.py:402  - applying step 35
INFO     yoyo.migrations:base.py:557 Marking 0001_initial_schema applied
INFO     yoyo.migrations:base.py:527 Applying 0002_drop_legacy_llmbroker_tables
INFO     yoyo.migrations:migrations.py:402  - applying step 0
INFO     yoyo.migrations:migrations.py:402  - applying step 1
INFO     yoyo.migrations:migrations.py:402  - applying step 2
INFO     yoyo.migrations:migrations.py:402  - applying step 3
INFO     yoyo.migrations:migrations.py:402  - applying step 4
INFO     yoyo.migrations:base.py:557 Marking 0002_drop_legacy_llmbroker_tables applied
INFO     yoyo.migrations:base.py:527 Applying 0003_classification_rules_llm_name
INFO     yoyo.migrations:migrations.py:402  - applying step 0
INFO     yoyo.migrations:base.py:557 Marking 0003_classification_rules_llm_name applied
INFO     dinary.background.classification.task:task.py:236 Receipt drain: processing receipt_id=1
ERROR    dinary.background.classification.task:task.py:301 Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 246, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/asyncio/threads.py", line 26, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 553, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error